fixind bug on smaller screen

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1986,7 +1986,7 @@ footer {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .last-blog > div:nth-child(3) {
     width: 100%;
   }
